--- a/storage/Views/T/shipping_management.cshtml
+++ b/storage/Views/T/shipping_management.cshtml
@@ -5,7 +5,7 @@
 
 <div class="widget box light-grey">
     <div class="widget-title">
-        <h4><i class="icon-globe"></i>产品类别</h4>
+        <h4><i class="icon-globe"></i>仓位管理</h4>
         <div class="tools">
             <a href="javascript:;" class="collapse"></a>
             <a href="#widget-config" data-toggle="modal" class="config"></a>
