--- a/storage/Views/Y/stock_management.cshtml
+++ b/storage/Views/Y/stock_management.cshtml
@@ -143,14 +143,11 @@
                             //}
                         },
                         {
-                            field: 'rkSupplier ',
-                            title: '入库类型',
-                            width: 150
-                            //edit: 'text',
-                            //templet: function (res) {
-                            //    console.log(res.ID)
-                            //    return '<em>' + res.email + '</em>'
-                            //}
+                            field: 'supplierName',
+                            title: '供应商',
+                            width: 80,
+                            edit: 'text',
+                            // sort: true
                         },
                         {
                             field: 'Sum',
@@ -163,10 +160,6 @@
                             field: 'Price',
                             title: '总金额',
                             width: 100
-                        },
-                        {
-                            field: 'Check1',
-                            title: '签名'
                         },
                         {
                             field: 'CreateUser',
