--- a/storage/Views/Y/breakage_management.cshtml
+++ b/storage/Views/Y/breakage_management.cshtml
@@ -4,7 +4,7 @@
 
 <div class="widget box light-grey">
     <div class="widget-title">
-        <h4><i class="icon-globe"></i>入库单管理</h4>
+        <h4><i class="icon-globe"></i>报损管理</h4>
         <div class="tools">
             <a href="javascript:;" class="collapse"></a>
             <a href="#widget-config" data-toggle="modal" class="config"></a>
