--- a/storage/Views/T/productType.cshtml
+++ b/storage/Views/T/productType.cshtml
@@ -28,8 +28,8 @@
         <div class="control-group">
             <div class="controls controls-cus">
                 <input type="hidden" id="txtReprtNum" name="txtReportNum" value="InOrderPrint" />
-                序号:&nbsp;&nbsp;<input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入类别编号" />&nbsp;&nbsp;
-                产品名:&nbsp;&nbsp;<input id="txtOrderName" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入类别名称" />&nbsp;&nbsp;
+                序号:&nbsp;&nbsp;<input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入类别编号" style="height:31px;"/>&nbsp;&nbsp;
+                产品名:&nbsp;&nbsp;<input id="txtOrderName" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入类别名称" style="height:31px;"/>&nbsp;&nbsp;
 
                 <a id="gritter-remove-all" class="btn btn-info" href="javascript:void(0)"><i class="icon-search"></i>&nbsp;搜索</a>
 
