--- a/storage/Views/T/supplier_management.cshtml
+++ b/storage/Views/T/supplier_management.cshtml
@@ -30,9 +30,9 @@
             <div class="controls controls-cus">
                 <input type="hidden" id="txtReprtNum" name="txtReportNum" value="InOrderPrint" />
 
-                供应商编号:&nbsp;&nbsp;<input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入供应商编号" />&nbsp;&nbsp;
-                供应商名字:&nbsp;&nbsp;<input id="txtOrderName" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入供应商姓名" />&nbsp;&nbsp;
-                供应商类型:&nbsp;&nbsp;<input id="txtOrderType" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入供应商类型" />&nbsp;&nbsp;
+                供应商编号:&nbsp;&nbsp;<input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入供应商编号" style="height:31px;"/>&nbsp;&nbsp;
+                供应商名字:&nbsp;&nbsp;<input id="txtOrderName" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入供应商姓名" style="height:31px;" />&nbsp;&nbsp;
+                供应商类型:&nbsp;&nbsp;<input id="txtOrderType" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入供应商类型" style="height:31px;" />&nbsp;&nbsp;
                 <a id="gritter-remove-all" class="btn btn-info" href="javascript:void(0)"><i class="icon-search"></i>&nbsp;搜索</a>
 
             </div>
