--- a/storage/Views/T/unit.cshtml
+++ b/storage/Views/T/unit.cshtml
@@ -27,8 +27,8 @@
             <div class="control-group">
                 <div class="controls controls-cus">
                     <input type="hidden" id="txtReprtNum" name="txtReportNum" value="InOrderPrint" />
-                    序号:&nbsp;&nbsp;<input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入类别编号" />&nbsp;&nbsp;
-                    计量单位:&nbsp;&nbsp;<input id="txtOrderName" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入计量单位名" />&nbsp;&nbsp;
+                    序号:&nbsp;&nbsp;<input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入类别编号" style="height:31px;"/>&nbsp;&nbsp;
+                    计量单位:&nbsp;&nbsp;<input id="txtOrderName" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入计量单位名" style="height:31px;"/>&nbsp;&nbsp;
 
                     <a id="gritter-remove-all" class="btn btn-info" href="javascript:void(0)"><i class="icon-search"></i>&nbsp;搜索</a>
 
