--- a/storage/Views/Y/stock_management.cshtml
+++ b/storage/Views/Y/stock_management.cshtml
@@ -33,9 +33,9 @@
             <div class="control-group">
                 <div class="controls controls-cus">
                     <input type="hidden" id="txtReprtNum" name="txtReportNum" value="InOrderPrint" />
-                    <input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入入库单号" />&nbsp;&nbsp;
-                    时间&nbsp;<input id="txtBeginTime" name="txtBeginTime" type="text" class="input-medium" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})" />
-                    -<input id="txtEndTime" name="txtEndTime" type="text" class="input-medium" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})" />&nbsp;&nbsp;
+                    <input id="txtOrderNum" name="txtOrderNum" type="text" class="input-medium" placeholder="请输入入库单号" style="height:31px;"/>&nbsp;&nbsp;
+                    时间&nbsp;<input id="txtBeginTime" name="txtBeginTime" type="text" class="input-medium" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})"style="height:31px;" />
+                    -<input id="txtEndTime" name="txtEndTime" type="text" class="input-medium" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})" style="height:31px;"/>&nbsp;&nbsp;
                     <a id="gritter-remove-all" class="btn btn-info" href="javascript:void(0)"><i class="icon-search"></i>&nbsp;搜索</a>
                     <div class="btn-group">
                         <button id="btnHSearch" data-toggle="dropdown" class="btn btn-primary dropdown-toggle">高级搜索 <span class="caret"></span></button>
